@@ -1567,7 +1567,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=setTimes\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=setTimes%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1641,7 +1646,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=setTimes:L\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=setTimes:L%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1728,8 +1738,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext="
-operator|+
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=%s:L%n"
+argument_list|,
 name|longContext
 operator|.
 name|substring
@@ -1738,8 +1752,7 @@ literal|0
 argument_list|,
 literal|128
 argument_list|)
-operator|+
-literal|":L\n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1941,7 +1954,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=setTimes:L\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=setTimes:L%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2080,7 +2098,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=setPermission:L\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=setPermission:L%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2153,7 +2176,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=mkdirs:L\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=mkdirs:L%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2224,7 +2252,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=setTimes\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=setTimes%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2291,7 +2324,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=setTimes\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=setTimes%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2365,7 +2403,12 @@ argument_list|()
 operator|.
 name|endsWith
 argument_list|(
-literal|"callerContext=mkdirs\n"
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"callerContext=mkdirs%n"
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
